grammar
#TODO finish rework

var-decl        : KEYWORD:VARIABLE_DECLARATION IDENTIFIER (IDENTIFIER )* EQ expr

expr            : var-decl KEYWORD:IN expr
                : logic-expr ((KEYWORD:OR|KEYWORD:AND) logic-expr)*

logic-expr      : arith-expr ((EE|LT|GT|LTE|GTE) arith-expr)*
                : KEYWORD:NOT logic-expr

arith-expr      : term ((PLUS|MINUS) term)*

term            : factor ((MUL|DIV) factor)*

factor          : (PLUS|MINUS) factor
                : power

power           : atom (POW factor)*

atom            : if-expr
                : IDENTIFIER (argument)*
                : fun-def
                : argument

if-expr         : KEYWORD:IF expr KEYWORD:THEN expr
                  (KEYWORD:ELIF expr KEYWORD:THEN expr)*
                  KEYWORD:ELSE expr

fun-def         : KEYWORD:FUN IDENTIFIER? (IDENTIFIER)* ARROW

argument        : INT|FLOAT
                : LPAREN expr RPAREN
                : IDENTIFIER
